# dotclaude

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  settings.local.json
agents/: quality-control-reviewer.md  service_runner.md
scripts/: safeify_compose.py  spinoff_agent.py  test-compose.yml
skills/pytests/templates/: __init__.py  conftest.py  e2e_test.py  factories.py  fixtures.py  flow_test.py  integration_test.py  pytest.ini  unit_conftest.py  unit_test.py
skills/python/scripts/: scaffold.py
skills/python/templates/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  ci.yml  cli.py  config.py  conftest.py  deps.py  docker-compose.yml  health.py  main.py  models.py  pyproject.toml  ruff.toml  session.py  test_health.py
